# myCmakeDemos

./: README.md
Demo1/: CMakeLists.txt  del.sh  main.cc
Demo2/: CMakeLists.txt  main.cc
Demo3/: CMakeLists.txt  del.sh  main.cc
Demo3/math/: CMakeLists.txt
Demo4/: CMakeLists.txt  config.h.in  main.cc
Demo4/math/: CMakeLists.txt
Demo5/: CMakeLists.txt  del.sh
Demo5/math/: CMakeLists.txt
Demo6/: CMakeLists.txt  config.h.in  main.cc
Demo6/math/: MathFunctions.h
Demo7/: CMakeLists.txt  config.h.in  del.sh  main.cc
Demo8/: CMakeLists.txt  del.sh  main.cc
